
1. 去掉登录验证，保证客户端and服务器分开运行，且可以跑。
	分离客户端服务器目录
	去掉了authc账号验证
	去掉了client bot相关代码

2. 客户端分为 game、bot、chat 3个，可以自行更改启动不同的客户端。
	game（保留）
	bot（删除）
	chat（删除）
	
3. 网络部分, 分为：
	Tcp （保留）
	Udp（未使用，删除）
	quic（默认未使用，删除）
	mpsc（一种c2c的网络，可选使用，删除后不影响）

-------------------------------------

1. 屏蔽使用socket2的地方，用client_tcp feature 区分。（用cargo跑的话，打开client_tcp feature)
2. 删除dyn相关，dyn是支持动态更新资源的，web应该不需要。（解除notify，net2的引用）
3. 删除feature tracy相关，profile用的，wasm不可用了。
4. 删除有问题的dev引用，一些单元测试test代码，test以后wasm也没法用了。
5. 删掉了egui相关，看了只有debug按钮用到，先删掉。删掉后进游戏跑还是正常的。
6. 删掉了plugin相关的feature，这个看上去是可以加载外部插件用的。（删掉后，游戏无影响）
7. 删除了 num_cpus（这个通过获取cpu核心数量，来定义场景同时渲染数量，修改为1）
8. walkdir 剥离：
	copy_dir ： 
	
 winapi、libc、

----
网络部分todo（会导致无法运行问题）：
1. 目前网络部分使用了多线程，这个wasm会有问题，修改 tokio 的 rt-multi-thread 为 rt，wasm不支持 rt-multi-thread。
2. 网络部分暂时屏蔽了tcpsocket，以后换。



	