@@ -14,11 +14,10 @@ crate-type = ["cdylib", "rlib"]
 [features]
 #singleplayer = ["server"]
 #plugins = ["client/plugins"]
-
 simd = ["vek/platform_intrinsics"]
-shaderc-from-source = ["shaderc/build-from-source"]
+#shaderc-from-source = ["shaderc/build-from-source"]
 default-publish = ["simd"]
-default = ["default-publish", "shaderc-from-source"]
+default = ["default-publish"]
 
 [dependencies]
 wasm-bindgen = "0.2.79"
@@ -77,7 +76,6 @@ backtrace = "0.3.40"
 bincode = "1.3.1"
 chrono = { version = "0.4.19", features = ["serde"] }
 chumsky = "0.3.2"
-cpal = "0.13"
 crossbeam-utils = "0.8.1"
 crossbeam-channel = "0.5"
 
@@ -94,7 +92,7 @@ ordered-float = { version = "2.0.1", default-features = false }
 rand = "0.8"
 rand_chacha = "0.3"
 rayon = "1.5"
-rodio = {version = "0.14", default-features = false, features = ["vorbis"]}
+rodio = {version = "0.15", default-features = false, features = ["vorbis"]}
 ron = {version = "0.7", default-features = false}
 serde = {version = "1.0", features = [ "rc", "derive" ]}
 slab = "0.4.2"
@@ -102,12 +100,8 @@ strum = { version = "0.23", features = ["derive"] }
 strum_macros = "0.23"
 treeculler = "0.2"
 
-
 #tokio = { version = "=1.17.0", default-features = false, features = ["rt-multi-thread"] }
-#num_cpus = "1.0"
-
 tokio = { version = "=1.17.0", default-features = false, features = ["rt-multi-thread"] }
-
 
 # vec_map = { version = "0.8.2" }
 inline_tweak = "1.0.2"
@@ -119,9 +113,6 @@ tracing = "0.1"
 [target.'cfg(target_os = "macos")'.dependencies]
 dispatch = "0.1.4"
 
-[target.'cfg(windows)'.build-dependencies]
-winres = "0.1"
-
 # Mumble
-[target.'cfg(not(target_os="macos"))'.dependencies]
-mumble-link = "0.1.0"
+# [target.'cfg(not(target_os="macos"))'.dependencies]
+# mumble-link = "0.1.0"
